# vkBasalt

./: .gitignore  README.md  default.nix  reshade.nix  shell.nix  stb.nix
config/: vkBasalt.conf  vkBasalt.json.in
src/: basalt.cpp  command_buffer.cpp  effect_dpx.cpp  effect_dpx.hpp  effect_film_noise.cpp  effect_film_noise.hpp  effect_lens_flare.cpp  effect_lens_flare.hpp  effect_lift_gamma_gain.cpp  effect_lift_gamma_gain.hpp  effect_reinhard.cpp  effect_reinhard.hpp  effect_reshade.cpp  effect_sepia.cpp  effect_sepia.hpp  effect_simple.cpp  effect_smaa.cpp  effect_smaa.hpp  effect_vibrance.cpp  effect_vibrance.hpp  meson.build  sampler.cpp  sampler.hpp  shader_sources.hpp
src/reshade/: effect_codegen_spirv.cpp
src/shader/: dpx.frag.glsl  film_noise.frag.glsl  lens_flare.frag.glsl  lift_gamma_gain.frag.glsl  linear_depth.frag.glsl  meson.build  reinhard.frag.glsl  screen_space_normal.frag.glsl  sepia.frag.glsl  smaa.h  smaa_blend.frag.glsl  smaa_edge.frag.glsl  smaa_edge_depth.frag.glsl  smaa_neighbor.frag.glsl  smaa_settings.h  vibrance.frag.glsl
